--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -206,6 +206,7 @@ test("brave_unit_tests") {
     "//brave/components/brave_rewards/test:brave_rewards_unit_tests",
     "//brave/components/brave_search/browser",
     "//brave/components/brave_search/common",
+    "//brave/components/brave_search_conversion:unit_tests",
     "//brave/components/brave_shields/browser",
     "//brave/components/brave_shields/common",
     "//brave/components/brave_sync:crypto",
@@ -231,6 +232,7 @@ test("brave_unit_tests") {
     "//brave/components/ntp_background_images/buildflags",
     "//brave/components/ntp_background_images/common",
     "//brave/components/ntp_widget_utils/browser",
+    "//brave/components/omnibox/browser:unit_tests",
     "//brave/components/p3a",
     "//brave/components/permissions:unit_tests",
     "//brave/components/search_engines:unit_tests",
