--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -260,6 +260,7 @@ if (is_android) {
     "//brave/browser/importer",
     "//brave/browser/infobars",
     "//brave/browser/ui/bookmark",
+    "//brave/components/brave_search_conversion",
     "//brave/components/time_period_storage",
     "//components/infobars/content",
   ]
