Brave search conversion promotion - UI part
Implement BraveOmniboxResultView by subclassing OmniboxResultView to provide
promotion specfic views. BraveOmniboxResultView controls visibility upstream children and
promotion children based on match. When promotion match is set, upstream children are all
hidden and promotion children get visible.

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -178,6 +178,10 @@ source_set("ui") {
       "views/frame/brave_opaque_browser_frame_view.h",
       "views/frame/brave_window_frame_graphic.cc",
       "views/frame/brave_window_frame_graphic.h",
+      "views/omnibox/brave_omnibox_result_view.cc",
+      "views/omnibox/brave_omnibox_result_view.h",
+      "views/omnibox/brave_search_conversion_promotion_view.cc",
+      "views/omnibox/brave_search_conversion_promotion_view.h",
       "views/rounded_separator.cc",
       "views/rounded_separator.h",
       "views/tabs/brave_browser_tab_strip_controller.cc",
@@ -287,6 +291,7 @@ source_set("ui") {
     "//brave/components/brave_rewards/resources:page_generated_resources",
     "//brave/components/brave_rewards/resources:tip_generated_resources",
     "//brave/components/brave_search/common",
+    "//brave/components/brave_search_conversion",
     "//brave/components/brave_shields/browser",
     "//brave/components/brave_vpn/buildflags",
     "//brave/components/brave_wayback_machine:buildflags",
