Fixed build failure on iOS PR builder
Deleted chrome/test dependency from brave/components/search_engines.
As //brave/components/search_engines target is included by
/components/omnibox/browser due to brave search promotion, this deps
caused error.

--- a/components/search_engines/BUILD.gn
+++ b/components/search_engines/BUILD.gn
@@ -8,10 +8,8 @@ source_set("unit_tests") {
   sources = [ "brave_prepopulated_engines_unittest.cc" ]
 
   deps = [
-    "//chrome/test:test_support",
-    "//components/prefs",
+    "//brave/components/search_engines",
     "//components/search_engines",
-    "//content/test:test_support",
     "//testing/gtest",
   ]
 }
