--- a/components/omnibox/browser/BUILD.gn
+++ b/components/omnibox/browser/BUILD.gn
@@ -12,12 +12,14 @@ source_set("unit_tests") {
     "//base",
     "//base/test:test_support",
     "//brave/components/brave_search_conversion",
+    "//brave/components/l10n/browser",
     "//brave/components/search_engines",
     "//components/omnibox/browser",
     "//components/omnibox/browser:test_support",
     "//components/prefs",
     "//components/prefs:test_support",
     "//components/search_engines",
+    "//testing/gmock",
     "//testing/gtest",
   ]
 }
