--- a/browser/resources/settings/sources.gni
+++ b/browser/resources/settings/sources.gni
@@ -59,7 +59,8 @@ brave_deps_chrome_browser_resources_settings_in_files = [
   "brave_rewards_page/brave_rewards_browser_proxy.m.js",
   "brave_rewards_page/brave_rewards_page.js",
   "brave_routes.js",
-  "brave_search_engines_page/brave_search_engines_page.m.js",
+  "brave_search_engines_page/brave_search_engines_page.js",
+  "brave_search_engines_page/brave_search_engines_page_browser_proxy.m.js",
   "brave_sync_page/brave_sync_browser_proxy.js",
   "brave_sync_page/brave_sync_code_dialog.js",
   "brave_sync_page/brave_sync_configure.js",
