--- a/browser/brave_rewards/sources.gni
+++ b/browser/brave_rewards/sources.gni
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 The Brave Authors. All rights reserved.
+# Copyright (c) 2022 The Brave Authors. All rights reserved.
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -14,6 +14,14 @@ brave_browser_brave_rewards_sources = [
   "//brave/browser/brave_rewards/rewards_service_factory.h",
   "//brave/browser/brave_rewards/rewards_tab_helper.cc",
   "//brave/browser/brave_rewards/rewards_tab_helper.h",
+  "//brave/browser/brave_rewards/vg_body_sync_bridge.cc",
+  "//brave/browser/brave_rewards/vg_body_sync_bridge.h",
+  "//brave/browser/brave_rewards/vg_spend_status_sync_bridge.cc",
+  "//brave/browser/brave_rewards/vg_spend_status_sync_bridge.h",
+  "//brave/browser/brave_rewards/vg_sync_service.cc",
+  "//brave/browser/brave_rewards/vg_sync_service.h",
+  "//brave/browser/brave_rewards/vg_sync_service_factory.cc",
+  "//brave/browser/brave_rewards/vg_sync_service_factory.h",
 ]
 
 brave_browser_brave_rewards_deps = [
