--- a/components/sync/protocol/protocol_sources.gni
+++ b/components/sync/protocol/protocol_sources.gni
@@ -1,7 +1,9 @@
-# Copyright (c) 2020 The Brave Authors. All rights reserved.
+# Copyright (c) 2022 The Brave Authors. All rights reserved.
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
-brave_sync_protocol_sources =
-    [ "//brave/components/sync/protocol/brave_device_info_specifics.proto" ]
+brave_sync_protocol_sources = [
+  "//brave/components/sync/protocol/brave_device_info_specifics.proto",
+  "//brave/components/sync/protocol/vg_specifics.proto"
+]
