Use only filecoin mainnet by default Resoves https://github.com/brave/brave-browser/issues/23367 Put filecoin testnet under feature flag, mainnet is by default

--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -236,6 +236,7 @@ source_set("hd_keyring") {
 
   deps = [
     ":transaction",
+    ":utils",
     "internal:hd_key",
     "//base",
     "//brave/components/brave_wallet/common",
